tests/snapshots/gateway/studio/docs_projected_gap_report_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "gaps": [],
  "repo_id": "gateway-sync",
  "summary": {
    "by_kind": [],
    "gap_count": 0,
    "page_count": 6
  }
}
